syntax = "proto3";
package joltify.vault;

option go_package = "github.com/joltify-finance/joltify_lending/x/vault/types";

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";

message PoolProposal {
  string pool_pubKey = 1 ;
  bytes pool_addr = 2 [(cosmos_proto.scalar) = "cosmos.AddressBytes",(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
  repeated bytes nodes = 3 [(cosmos_proto.scalar) = "cosmos.AddressBytes",(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
}

message CreatePool {
  string block_height = 1;
  repeated bytes validators = 2  [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/x/staking/types.Validator", (gogoproto.nullable) = false];
  repeated PoolProposal proposal = 3;
}
